@startuml ClasesDiagram
class Usuario {
  - username: string
  - passwordHash: string
  - createdAt: datetime
}

class Topico {
  - name: string
  - creator: Usuario
  - createdAt: datetime
  - replicas: List<string>
}

class Cola {
  - name: string
  - creator: Usuario
  - createdAt: datetime
  - replicas: List<string>
}

class Mensaje {
  - id: string
  - payload: string
  - headers: Map<string, string>
  - timestamp: datetime
  - status: string
  - partition: int
  - resourceName: string
  - resourceType: string
}

class LogEvento {
  - eventType: string
  - user: string
  - resource: string
  - timestamp: datetime
  - details: json
}

Usuario "1" --> "0..*" Topico
Usuario "1" --> "0..*" Cola
Topico "1" --> "0..*" Mensaje
Cola "1" --> "0..*" Mensaje
Usuario "1" --> "0..*" LogEvento
@enduml
